--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,22 @@
 server:
-  port: 8080
+  port: 8880
+
 spring:
   application:
     name: employee
-    config:
-    import:
-      configserver: http://localhost:8761/eureka
-
   jpa:
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
     show-sql: true
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: none
-      dialect: org.hibernate.dialect.MySQLDialect
+      ddl-auto: update
+      dialect: org.hibernate.dialect.PostgreSQLDialect
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/construction
-    username: root
-    password: noura
+    url: jdbc:postgresql://construction-app-8728.7tc.aws-eu-central-1.cockroachlabs.cloud:26257/construction?sslmode=require&password=-J5_BzsUkoJWJprUrzrSGA&user=noura
+    username: noura
+    password: -J5_BzsUkoJWJprUrzrSGA
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka
-    fetch-registry: true
-    register-with-eureka: true
